--- a/lab1/task1/index.html
+++ b/lab1/task1/index.html
@@ -12,20 +12,22 @@
         <rect x="210" y="0" width="45" height="207"/>
     </svg>
 
-    <svg class="second" width="450" height="450">
-        <rect x="100" y="0" width="60" height="200" style="transform: rotate(17deg)"/>
-        <rect x="220" y="-330" width="60" height="320" style="transform: rotate(90deg)"/>
-        <rect x="30" y="-250" width="60" height="153" style="transform: rotate(90deg)"/>
-        <rect x="170" y="102" width="60" height="200" style="transform: rotate(-17deg)"/>
-        <rect x="-30" y="270" width="60" height="95" style="transform: rotate(-15deg)"/>
-        <rect x="300" y="180" width="60" height="95" style="transform: rotate(15deg)"/>
+    <svg class="second" width="300" height="300">
+        <rect x="87" y="5" width="30" height="150" style="transform: rotate(12deg)"/>
+        <rect x="148" y="61" width="30" height="150" style="transform: rotate(-12deg)"/>
+        <rect x="22" y="-187" width="30" height="103" style="transform: rotate(90deg)"/>
+        <rect x="190" y="-228" width="35" height="185" style="transform: rotate(90deg)"/>
+        <rect x="15" y="222" width="30" height="65" style="transform: rotate(-10deg)"/>
+        <rect x="223" y="175" width="30" height="65" style="transform: rotate(10deg)"/>
+        <rect x="53" y="168" width="30" height="23"/>
+        <rect x="188" y="168" width="30" height="23"/>
     </svg>
 
     <svg class="third" width="300" height="300">
-        <rect x="135" y="-10" width="60" height="280" style="transform: rotate(20deg)"/>
-        <rect x="180" y="-255" width="60" height="165" style="transform: rotate(90deg)"/>
-        <rect x="120" y="105" width="60" height="280" style="transform: rotate(-20deg)"/>
-        <rect x="37" y="-205" width="60" height="75" style="transform: rotate(90deg)"/>
+        <rect x="135" y="-10" width="45" height="280" style="transform: rotate(20deg)"/>
+        <rect x="180" y="-255" width="45" height="165" style="transform: rotate(90deg)"/>
+        <rect x="137" y="105" width="45" height="280" style="transform: rotate(-20deg)"/>
+        <rect x="37" y="-205" width="45" height="75" style="transform: rotate(90deg)"/>
     </svg>
 </body>
 </html>
