--- a/lab1/task2/index.html
+++ b/lab1/task2/index.html
@@ -2,44 +2,66 @@
 <head>
     <meta charset="UTF-8">
     <title>lab1 task2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="trolleybus" style="cursor: pointer; top: 0; left: 0;">
+    <div id="trolleybus1" class="trolleybus-container green">
         <svg width="1000" height="450">
-            <line x1="0" y1="20" x2="1000" y2="20" stroke="black" stroke-width="2"/>
-
-            <rect x="500" y="160" width="300" height="30" rx="15" ry="40" style="fill:#0a320a; stroke-width:1; stroke: #000000"/>
-            <rect x="100" y="180" width="800" height="200" rx="40" ry="20" style="fill:#0e8c0f; stroke-width:1; stroke: #000000"/>
-
-            <line x1="720" y1="160" x2="520" y2="20" style="stroke-width:4; stroke:black;"/>
-            <line x1="680" y1="160" x2="480" y2="20" style="stroke-width:4; stroke:black;"/>
-            <rect x="515" y="12" width="10" height="15" rx="5" ry="5" style="fill:#061506"/>
-            <rect x="475" y="12" width="10" height="15" rx="5" ry="5" style="fill:#061506"/>
-
-            <circle cx="290" cy="380" r="35" style="fill:#000000"/>
-            <circle cx="290" cy="380" r="20" style="fill:#7a7878"/>
-
-            <circle cx="750" cy="380" r="35" style="fill:#000000"/>
-            <circle cx="750" cy="380" r="20" style="fill:#7a7878"/>
-
-            <rect x="795" y="210" width="60" height="170" rx="5" ry="5" style="fill:#1aa5a4; stroke-width:1; stroke: #000000"/>
-
-            <rect x="125" y="210" width="60" height="170" rx="2" ry="2" style="fill:#1aa5a4; stroke-width:1; stroke: #000000"/>
-            <rect x="185" y="210" width="60" height="170" rx="2" ry="2" style="fill:#1aa5a4; stroke-width:1; stroke: #000000"/>
-
-            <rect x="470" y="210" width="60" height="170" rx="2" ry="2" style="fill:#1aa5a4; stroke-width:1; stroke: #000000"/>
-            <rect x="530" y="210" width="60" height="170" rx="2" ry="2" style="fill:#1aa5a4; stroke-width:1; stroke: #000000"/>
-
-            <rect x="875" y="195" width="25" height="120" rx="5" ry="5" style="fill:#1aa5a4; stroke-width:1; stroke: #000000"/>
-            <rect x="100" y="195" width="15" height="120" rx="5" ry="5" style="fill:#1aa5a4; stroke-width:1; stroke: #000000"/>
-
-            <rect x="255" y="195" width="100" height="120" rx="10" ry="10" style="fill:#1aa5a4; stroke-width:1; stroke: #000000"/>
-            <rect x="360" y="195" width="100" height="120" rx="10" ry="10" style="fill:#1aa5a4; stroke-width:1; stroke: #000000"/>
-
-            <rect x="600" y="195" width="100" height="120" rx="10" ry="10" style="fill:#1aa5a4; stroke-width:1; stroke: #000000"/>
-            <rect x="705" y="195" width="80" height="120" rx="10" ry="10" style="fill:#1aa5a4; stroke-width:1; stroke: #000000"/>
+            <use href="#trolleybus"/>
         </svg>
     </div>
+
+    <div id="trolleybus2" class="trolleybus-container blue">
+        <svg width="1000" height="450">
+            <use href="#trolleybus"/>
+        </svg>
+    </div>
+
+    <svg width="0" height="0" style="position: absolute;">
+        <defs>
+            <g id="wheel">
+                <circle cx="35" cy="35" r="35" fill="black"/>
+                <circle cx="35" cy="35" r="20" fill="gray"/>
+            </g>
+
+            <g id="door">
+                <rect width="60" height="170" rx="2" ry="2" style="fill: var(--door-color);" stroke="black" stroke-width="1"/>
+            </g>
+
+            <g id="window">
+                <rect width="100" height="120" rx="10" ry="10" style="fill: var(--window-color);" stroke="black" stroke-width="1"/>
+            </g>
+
+            <g id="trolleybus">
+                <line x1="0" y1="20" x2="1000" y2="20" stroke="black" stroke-width="2"/>
+
+                <line x1="720" y1="160" x2="520" y2="20" stroke="black" stroke-width="4"/>
+                <line x1="680" y1="160" x2="480" y2="20" stroke="black" stroke-width="4"/>
+                <rect x="515" y="12" width="10" height="15" rx="5" ry="5" fill="black"/>
+                <rect x="475" y="12" width="10" height="15" rx="5" ry="5" fill="black"/>
+
+                <rect x="500" y="160" width="300" height="30" rx="15" ry="40" class="roof" style="fill: var(--roof-color);"/>
+                <rect x="100" y="180" width="800" height="200" rx="40" ry="20" class="body" style="fill: var(--body-color);"/>
+
+                <use href="#door" x="125" y="210"/>
+                <use href="#door" x="190" y="210"/>
+                <use href="#door" x="470" y="210"/>
+                <use href="#door" x="535" y="210"/>
+                <use href="#door" x="810" y="210"/>
+
+                <use href="#window" x="255" y="195"/>
+                <use href="#window" x="360" y="195"/>
+                <use href="#window" x="600" y="195"/>
+                <use href="#window" x="705" y="195"/>
+
+                <rect x="875" y="195" width="25" height="120" rx="5" ry="5" style="fill: var(--window-color); stroke-width:1; stroke: #000000"/>
+                <rect x="100" y="195" width="15" height="120" rx="5" ry="5" style="fill: var(--window-color); stroke-width:1; stroke: #000000"/>
+
+                <use href="#wheel" x="255" y="345"/>
+                <use href="#wheel" x="715" y="345"/>
+            </g>
+        </defs>
+    </svg>
     <script src="script.js"></script>
 </body>
 </html>
